--- a/images/openstack-venv-builder/Dockerfile
+++ b/images/openstack-venv-builder/Dockerfile
@@ -3,12 +3,13 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM ubuntu-cloud-archive AS requirements
-ARG REQUIREMENTS_GIT_REF=18098b9abacbd8d7257bebc1b302294f634441ab
+ARG REQUIREMENTS_GIT_REF=train-eol
 ADD --keep-git-dir=true https://opendev.org/openstack/requirements.git#${REQUIREMENTS_GIT_REF} /src/requirements
 RUN cp /src/requirements/upper-constraints.txt /upper-constraints.txt
 RUN <<EOF sh -xe
 sed -i '/glance-store/d' /upper-constraints.txt
 sed -i '/horizon/d' /upper-constraints.txt
+sed -i 's/^pyroute2==.*$/pyroute2==0.6.11/' /upper-constraints.txt
 EOF
 
 FROM python-base
@@ -17,10 +18,13 @@ apt-get update -qq
 apt-get install -qq -y --no-install-recommends \
     build-essential \
     git \
+    libffi-dev \
     libldap2-dev \
     libpcre3-dev \
     libsasl2-dev \
     libssl-dev \
+    libxml2-dev \
+    libxslt1-dev \
     lsb-release \
     openssh-client \
     python3 \
@@ -30,7 +34,7 @@ apt-get install -qq -y --no-install-recommends \
 apt-get clean
 rm -rf /var/lib/apt/lists/*
 EOF
-RUN python3 -m venv --upgrade-deps --system-site-packages /var/lib/openstack
+RUN python3 -m venv --system-site-packages /var/lib/openstack
 COPY --from=requirements --link /upper-constraints.txt /upper-constraints.txt
 RUN pip3 install \
     --constraint /upper-constraints.txt \
