Build Manila images on tag
Change-Id: I9a069aae54dec49b6885d08b662e4baf1ee0f703

--- a/.github/workflows/manila.yml
+++ b/.github/workflows/manila.yml
@@ -23,9 +23,8 @@ on:
       - main
     paths:
       - .github/workflows/manila.yml
-  release:
-    types:
-      - published
+    tags:
+      - v*
   workflow_dispatch:
 
 jobs:
