Add tool for bumping images
Skip-Release-Notes

Change-Id: I500b01ef58b54680e52c04f3c4576b640e07e1be
(cherry picked from commit 7f6414c93f48dca1677c67a19ad4b5de6b233209)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ rustainers = { path = "crates/rustainers" }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 
 [workspace]
-members = [ "crates/ovsinit","crates/passwd", "crates/rustainers"]
+members = [ "crates/*" ]
