Fix ansible-lint jobs + fix jobs
The images were not being promoted for stable/zed so this
fixes it as well as forces a promotion for the images that
have not been promoted since.

These are merged together because the gate is broken.

Skip-Release-Notes
Change-Id: I761b12842c7771480a30d6bc598590cda14e5bdc

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -62,5 +62,8 @@
     release:
       jobs:
         - atmosphere-publish-collection
+    promote:
+      jobs:
+        - atmosphere-promote-images
     vars:
       container_registry: harbor.atmosphere.dev/library
