--- a/images/designate/Dockerfile
+++ b/images/designate/Dockerfile
@@ -8,8 +8,8 @@ ADD --keep-git-dir=true https://opendev.org/openstack/designate.git#${DESIGNATE_
 RUN git -C /src/designate fetch --unshallow
 COPY patches/designate /patches/designate
 RUN git -C /src/designate apply --verbose /patches/designate/*
-RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
-pip3 install \
+RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
+uv pip install \
     --constraint /upper-constraints.txt \
         /src/designate
 EOF
