--- a/images/cinder/Dockerfile
+++ b/images/cinder/Dockerfile
@@ -8,8 +8,8 @@ ADD --keep-git-dir=true https://opendev.org/openstack/cinder.git#${CINDER_GIT_RE
 RUN git -C /src/cinder fetch --unshallow
 COPY patches/cinder /patches/cinder
 RUN git -C /src/cinder apply --verbose /patches/cinder/*
-RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
-pip3 install \
+RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
+uv pip install \
     --constraint /upper-constraints.txt \
         /src/cinder \
         purestorage \
