--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,18 @@
 name = "atmosphere"
 edition = "2021"
 
+[dependencies]
+git2 = "0.20.0"
+git2-hooks = "0.4.0"
+md5 = "0.7.0"
+regex = "1.11.1"
+reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
+serde = { version = "1.0.218", features = ["derive"] }
+serde_yaml = "0.9.34"
+tokio = { version = "1.43.0", features = ["fs", "macros", "rt-multi-thread"] }
+
 [dev-dependencies]
 rustainers = { path = "crates/rustainers" }
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 
 [workspace]
 members = [ "crates/*" ]
