Modify access rules

--- a/project.config
+++ b/project.config
@@ -8,3 +8,5 @@
 	description = Simple & easy private cloud platform featuring VMs, Kubernetes & bare-metal\n
 [access "refs/heads/*"]
 	read = group GitHub Replication
+[access "refs/tags/*"]
+	read = group GitHub Replication
