Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,9 +3,8 @@
 [submit]
 	action = inherit
 [access "refs/*"]
-	owner = group GitHub Replication
 	owner = group atmosphere-core
 [project]
 	description = Simple & easy private cloud platform featuring VMs, Kubernetes & bare-metal\n
-[access "refs/heads/*"]
+[access "refs/heads/stable/*"]
 	owner = group GitHub Replication
