--- a/project.config
+++ b/project.config
@@ -6,5 +6,5 @@
 	owner = group atmosphere-core
 [project]
 	description = Simple & easy private cloud platform featuring VMs, Kubernetes & bare-metal\n
-[access "refs/heads/stable/*"]
+[access "refs/heads/*"]
 	owner = group GitHub Replication
