Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,7 +3,7 @@
 [submit]
 	action = inherit
 [access "refs/*"]
-	owner = group GitHub Replication
 	owner = group atmosphere-core
+	read = group GitHub Replication
 [project]
 	description = Simple & easy private cloud platform featuring VMs, Kubernetes & bare-metal\n
