--- a/project.config
+++ b/project.config
@@ -7,5 +7,5 @@
 	owner = group atmosphere-core
 [project]
 	description = Simple & easy private cloud platform featuring VMs, Kubernetes & bare-metal\n
-[access "refs/heads/*"]
+[access "refs/tags/*"]
 	read = group GitHub Replication
