Modify access rules

--- a/project.config
+++ b/project.config
@@ -8,4 +8,4 @@
 [project]
 	description = Simple & easy private cloud platform featuring VMs, Kubernetes & bare-metal\n
 [access "refs/tags/*"]
-	read = group GitHub Replication
+	owner = group GitHub Replication
