Modify access rules

--- a/project.config
+++ b/project.config
@@ -9,3 +9,5 @@
 	description = Simple & easy private cloud platform featuring VMs, Kubernetes & bare-metal\n
 [access "refs/tags/*"]
 	owner = group GitHub Replication
+[access "refs/heads/*"]
+	owner = group GitHub Replication
