Add frr-k8s chart support
Change-Id: I0c0d745b2fe36af257ea6b892f4a4581e3a72277

--- a/.charts.yml
+++ b/.charts.yml
@@ -53,6 +53,10 @@ charts:
       gerrit:
         review.opendev.org:
           - 899932
+  - name: frr-k8s
+    version: 0.0.17
+    repository:
+      url: https://metallb.github.io/frr-k8s
   - name: glance
     version: 0.4.15
     repository: *openstack_helm_repository
