--- a/playbooks/openstack.yml
+++ b/playbooks/openstack.yml
@@ -88,6 +88,11 @@
       tags:
         - openvswitch
 
+    - role: frr_k8s
+      when: ovn_bgp_agent_enabled | default(false)
+      tags:
+        - frr_k8s
+
     - role: ovn
       tags:
         - ovn
