--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -64,6 +64,8 @@ _atmosphere_images:
   grafana_sidecar: "{{ atmosphere_image_prefix }}quay.io/kiwigrid/k8s-sidecar:1.26.1"
   grafana: "{{ atmosphere_image_prefix }}docker.io/grafana/grafana:11.0.0"
   goldpinger: "{{ atmosphere_image_prefix }}docker.io/bloomberg/goldpinger:3.10.1"
+  frr: "{{ atmosphere_image_prefix }}quay.io/frrouting/frr:9.1.0"
+  frr_k8s: "{{ atmosphere_image_prefix }}quay.io/metallb/frr-k8s:v0.0.17"
   haproxy: "{{ atmosphere_image_prefix }}docker.io/library/haproxy:2.5"
   heat_api: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/heat:{{ atmosphere_release }}"
   heat_cfn: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/heat:{{ atmosphere_release }}"
@@ -115,6 +117,7 @@ _atmosphere_images:
   kube_coredns: "{{ atmosphere_image_prefix }}registry.k8s.io/coredns/coredns:v1.8.4"
   kube_etcd: "{{ atmosphere_image_prefix }}registry.k8s.io/etcd:3.5.6-0"
   kube_proxy: "{{ atmosphere_image_prefix }}registry.k8s.io/kube-proxy:v1.22.17"
+  kube_rbac_proxy: "{{ atmosphere_image_prefix }}quay.io/brancz/kube-rbac-proxy:v0.12.0"
   kube_scheduler: "{{ atmosphere_image_prefix }}registry.k8s.io/kube-scheduler:v1.22.17"
   kube_state_metrics: "{{ atmosphere_image_prefix }}registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.12.0"
   kube_vip: "{{ atmosphere_image_prefix }}ghcr.io/kube-vip/kube-vip:v0.6.4"
