--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,13 @@ name = "atmosphere"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.29", features = ["derive"] }
+env_logger = { version = "0.11.6", features = ["unstable-kv"] }
 git2 = "0.20.0"
 git2-hooks = "0.4.0"
+imagebumper = { path = "crates/imagebumper" }
 indoc = "2.0.5"
+log = { version = "0.4.25", features = ["kv"] }
 md5 = "0.7.0"
 regex = "1.11.1"
 reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
