--- a/images/tempest/Dockerfile
+++ b/images/tempest/Dockerfile
@@ -10,7 +10,7 @@ RUN GO111MODULE=off CGO_ENABLED=0 GOOS=linux go build \
     /src/octavia_tempest_plugin/contrib/test_server/test_server.go
 
 FROM openstack-venv-builder AS build
-ARG TEMPEST_GIT_REF=c0da6e843a74c2392c8e87e8ff36d2fea12949c4
+ARG TEMPEST_GIT_REF=50bd5aa470db2958018513ab43696dbb2596b30f
 ADD --keep-git-dir=true https://opendev.org/openstack/tempest.git#${TEMPEST_GIT_REF} /src/tempest
 RUN git -C /src/tempest fetch --unshallow
 ADD --keep-git-dir=true https://opendev.org/openstack/barbican-tempest-plugin.git#master /src/barbican-tempest-plugin
@@ -25,7 +25,7 @@ ADD --keep-git-dir=true https://opendev.org/openstack/neutron-tempest-plugin.git
 RUN git -C /src/neutron-tempest-plugin fetch --unshallow
 ADD --keep-git-dir=true https://opendev.org/openstack/octavia-tempest-plugin.git#master /src/octavia-tempest-plugin
 RUN git -C /src/octavia-tempest-plugin fetch --unshallow
-ADD https://releases.openstack.org/constraints/upper/2023.1 /upper-constraints.txt
+ADD https://releases.openstack.org/constraints/upper/master /upper-constraints.txt
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
     --constraint /upper-constraints.txt \
