--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
   "baseBranches": ["main", "/^stable\\/.*/"],
+  "commitMessageExtra": "Skip-Release-Notes",
   "packageRules": [
     {
       "matchPackagePatterns": ["*"],
