--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "extends": ["config:base"],
   "baseBranches": ["main", "/^stable\\/.*/"],
   "commitBody": "Skip-Release-Notes",
+  "prHourlyLimit": 10,
   "packageRules": [
     {
       "matchPackagePatterns": ["*"],
