Update dependency magnum-cluster-api to v0.29.0 (main)
Skip-Release-Notes

Renovate-Branch: renovate/main-magnum-cluster-api-0.x
Change-Id: I092c106b5cbe24bd4881076f386fbd7abba446bc

--- a/zuul.d/playbooks/cargo-test/run.yml
+++ b/zuul.d/playbooks/cargo-test/run.yml
@@ -11,7 +11,7 @@
     - name: Ensure required packages are installed
       become: true
       ansible.builtin.apt:
-        name: ["build-essential"]
+        name: ["build-essential", "pkg-config", "libssl-dev"]
         state: present
 
     - name: Run "cargo test"
