--- a/charts/octavia/Chart.yaml
+++ b/charts/octavia/Chart.yaml
@@ -1,5 +1,9 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: v1.0.0
+dependencies:
+- name: helm-toolkit
+  repository: file://../../openstack-helm-infra/helm-toolkit
+  version: '>= 0.1.0'
 description: OpenStack-Helm Octavia
 home: https://docs.openstack.org/octavia/latest/
 icon: https://www.openstack.org/themes/openstack/images/project-mascots/Octavia/OpenStack_Project_Octavia_vertical.png
@@ -9,4 +13,4 @@ name: octavia
 sources:
 - https://opendev.org/openstack/octavia
 - https://opendev.org/openstack/openstack-helm
-version: 0.2.9
+version: 2024.2.0
