fix barbican against master
Barbican chart will fail once we bump
base barbican image through [2].

Also rewrite [1] due to commit [2]

upstream: https://review.opendev.org/c/944975

[1] charts/barbican/templates/bin/_simple_crypto_kek_rewrap.py.tpl
[2] cfba1c1ba8f3659e6de727c3f1c274052e9ccace

Change-Id: I7262fdc13e8e2196dff7d5b9c98b85a35715b931

--- a/charts/barbican/templates/configmap-etc.yaml
+++ b/charts/barbican/templates/configmap-etc.yaml
@@ -98,5 +98,5 @@ data:
   api_audit_map.conf: {{ include "helm-toolkit.utils.to_ini" .Values.conf.audit_map | b64enc }}
   policy.yaml: {{ toYaml .Values.conf.policy | b64enc }}
   barbican-api-uwsgi.ini: {{ include "helm-toolkit.utils.to_ini" .Values.conf.barbican_api_uwsgi | b64enc }}
-  old_kek: {{ index .Values.conf.simple_crypto_kek_rewrap "old_kek" | default "" | b64enc | quote }}
+  old_keks: {{ index .Values.conf.simple_crypto_kek_rewrap "old_kek" | default "" | b64enc | quote }}
 {{- end }}
