--- a/renovate.json
+++ b/renovate.json
@@ -17,6 +17,11 @@
     {
       "enabled": true,
       "matchDatasources": ["git-refs"]
+    },
+    {
+      "groupName": "tempest",
+      "matchDatasources": ["git-refs"],
+      "matchFileNames": ["images/tempest/Dockerfile"]
     }
   ],
   "customManagers": [
@@ -36,6 +41,16 @@
       "depNameTemplate": "neutron-policy-server",
       "packageNameTemplate": "https://review.vexxhost.dev/neutron-policy-server",
       "currentValueTemplate": "main"
+    },
+    {
+      "customType": "regex",
+      "fileMatch": ["images/tempest/Dockerfile"],
+      "matchStrings": [
+        "ADD https://opendev.org/openstack/(?<depName>[^.]+)(\\.git)?#(?<currentDigest>[0-9a-f]{40}) /src(?<path>.*)"
+      ],
+      "datasourceTemplate": "git-refs",
+      "packageNameTemplate": "https://opendev.org/openstack/{{depName}}",
+      "currentValueTemplate": "master"
     }
   ]
 }
