Stop using cached upper-constraints.txt
When we used ADD, we were having cache busting problems because
there's no way to download the specific file, so we should
operate instead on the git repo which will be pinned and cache
busted if the commit changes.

Skip-Release-Notes

Change-Id: Iab83b182581ebaed6cf2cd8dec7bac3da1f8ea48

--- a/renovate.json
+++ b/renovate.json
@@ -46,7 +46,7 @@
       "customType": "regex",
       "fileMatch": ["images/tempest/Dockerfile"],
       "matchStrings": [
-        "ADD https://opendev.org/openstack/(?<depName>[^.]+)(\\.git)?#(?<currentDigest>[0-9a-f]{40}) /src(?<path>.*)"
+        "ADD --keep-git-dir=true https://opendev.org/openstack/(?<depName>[^.]+)(\\.git)?#(?<currentDigest>[0-9a-f]{40}) /src(?<path>.*)"
       ],
       "datasourceTemplate": "git-refs",
       "packageNameTemplate": "https://opendev.org/openstack/{{depName}}",
