add udev role for pure storage
Skip-Release-Notes

Change-Id: I36641f61470d44a530f9bd00a786c162405f7f4b

--- a/playbooks/openstack.yml
+++ b/playbooks/openstack.yml
@@ -79,6 +79,10 @@
       tags:
         - iscsi
 
+    - role: udev
+      tags:
+        - udev
+
 - name: Deploy SDN
   hosts: controllers:computes
   become: true
