Fix valid_interfaces for Ironic
Change-Id: Ifa141c0ee7b5d3367d86c4ff873ea66e97378075

--- a/roles/neutron/vars/main.yml
+++ b/roles/neutron/vars/main.yml
@@ -50,6 +50,8 @@ __neutron_helm_values:
         password: "{{ openstack_helm_endpoints_neutron_keystone_password }}"
       nova:
         live_migration_events: true
+      ironic:
+        valid_interfaces: internal
       placement:
         region_name: "{{ openstack_helm_endpoints_neutron_region_name }}"
         username: "neutron-{{ openstack_helm_endpoints_neutron_region_name }}"
